--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>cardsHover</title>
 </head>
 
@@ -28,9 +28,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- https://source.unsplash.com/random/1000x1000?sky' -->
 
-	<script src="index.js"></script>
+	<script src="/js/index.js"></script>
 </body>
 
 </html>
